style(iframe): fix heading vertical rhythm and open paragraph spacing

--- a/frontend/src/iframe/frame.css
+++ b/frontend/src/iframe/frame.css
@@ -285,46 +285,47 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.3;
   font-weight: 700;
   letter-spacing: -0.01em;
+  margin: 1.4em 0 0.4em;
+}
+
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child,
+h6:first-child {
+  margin-top: 0;
 }
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
 }
 
 h2 {
   font-size: 1.5em;
-  margin: 0.83em 0;
 }
 
 h3 {
   font-size: 1.2em;
-  margin: 1em 0;
-}
-
-h4 {
-  font-weight: 700;
-  margin: 1.33em 0;
 }
 
 h5 {
   font-size: 0.83em;
-  font-weight: 700;
-  margin: 1.67em 0;
 }
 
 h6 {
   font-size: 0.67em;
-  font-weight: 700;
-  margin: 2.33em 0;
 }
 
 p {
-  margin: 0 0 0.5em;
+  margin: 0 0 0.75em;
 }
 
 p:last-child {
